[package]
name = "ttss"
version = "0.1.0"
authors = ["Th3Whit3Wolf <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web =  "2.0.0"
actix-service = "1.0.5"
clap = "2.33.0"
tera = "1.0"
tantivy = "0.12.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.2.10"
sitemap = "0.4"
rand = "0.7.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
