[package]
name = "ttss"
version = "0.2.0"
authors = ["Th3Whit3Wolf <the.white.wolf.is.1337@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "2.0.0", default-features = false }
actix-rt = "1.1.1"
dotenv = "0.15.0"
once_cell = "1.4.0"
rand = "0.7.3"
sailfish = "0.1.3"
sailfish-macros = "0.1.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sitemap = "0.4"
tantivy = "0.12.0"
time = "0.2.10"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
